# agentic-osint-agent

./: .env.example  .gitignore  .zenodo.json  CITATION.cff  ETHICAL_USE.md  README.md  pyproject.toml  requirements.txt
agent/: __init__.py  cli.py  graph.py  llm.py  prompts.py  state.py
agent/tui/: __init__.py  banner.py  dashboard.py  report.py  theme.py
eval/: consolidate.py  run_eval.py  run_tool_smoke.py  test_targets.json
memory/: __init__.py  evidence.py  scratchpad.py
output/: __init__.py  formatter.py  markdown.py
paper/: paper.tex
results/: eval_results.csv  eval_summary.json  tool_smoke.csv  tool_smoke_summary.json
results/eval/: berkeley.edu.json  berkeley.edu.md  cisa.gov.json  cisa.gov.md  cloudflare.com.json  cloudflare.com.md  example.com.json  example.com.md  fbi.gov.json  fbi.gov.md  github.com.json  github.com.md  gitlab.com.json  gitlab.com.md  harvard.edu.json  harvard.edu.md  iana.org.json  iana.org.md  ietf.org.json  ietf.org.md  mit.edu.json  mit.edu.md  mozilla.org.json  mozilla.org.md  nasa.gov.json  nasa.gov.md  nist.gov.json  nist.gov.md  noaa.gov.json  noaa.gov.md  owasp.org.json  owasp.org.md  ox.ac.uk.json  ox.ac.uk.md  stanford.edu.json  stanford.edu.md  torproject.org.json  torproject.org.md  wikipedia.org.json  wikipedia.org.md
scripts/: render_figures.py  render_terminal.py
tests/: conftest.py  test_evidence.py  test_graph.py  test_llm.py  test_output.py  test_tools_mock.py  test_tui.py
tools/: __init__.py  base.py  dns_tool.py  github_dork_tool.py  shodan_tool.py  wayback_tool.py  whois_tool.py
