[project]
name = "agentic-osint-agent"
version = "1.0.0"
description = "A LangGraph ReAct agent for autonomous public-source investigation."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Ali Murtaza Bhutto"}]
keywords = ["agentic AI", "OSINT", "LangGraph", "ReAct", "threat intelligence"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]

[project.scripts]
osint = "agent.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent*", "tools*", "memory*", "output*", "eval*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.bandit]
skips = []
